@@ -14,11 +14,18 @@ this repository contains the full copyright notices and license terms. -->
                         expr="/form/notebook/page[@id=&quot;childs&quot;]"
                         position="before">
                         <page string="Accounting" col="4" id="accounting">
+                            <separator string="Accounts" id="accounts" colspan="4"/>
+                            <label name="account_parent"/>
+                            <field name="account_parent"/>
+                            <newline/>
                             <label name="account_revenue"/>
                             <field name="account_revenue"/>
                             <label name="account_expense"/>
                             <field name="account_expense"/>
                             <separator string="Taxes" id="taxes" colspan="4"/>
+                            <label name="taxes_parent"/>
+                            <field name="taxes_parent"/>
+                            <newline/>
                             <field name="customer_taxes" colspan="2"/>
                             <field name="supplier_taxes" colspan="2"/>
                         </page>
