@@ -1,3 +1,5 @@
+* Allow to use the accounts and taxes of parent category
+
 Version 2.2.0 - 2011-10-24
 * Bug fixes (see mercurial logs for details)
 
